Move '.mx_EventTile_image' to '.mx_EventTile_mediaLine'
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -277,11 +277,10 @@ limitations under the License.
                 // allow the event to be collapsed, this causes the waveform to get cropped
                 min-width: 0;
             }
-        }
 
         // we put the timestamps for media (other than stickers) atop the media
         // for images we also apply a linear gradient and change the timestamp colour to aid readability
-        &.mx_EventTile_mediaLine.mx_EventTile_image {
+        &.mx_EventTile_image {
             .mx_MessageTimestamp {
                 color: #ffffff; // regardless of theme, always visible on the below gradient
             }
@@ -298,6 +297,7 @@ limitations under the License.
                 right: 0;
                 pointer-events: none;
             }
+        }
         }
 
         &.mx_EventTile_sticker {
