Apply 'justify-content: center' to bubble layout only
'justify-content: center' was added for the bubble layout with 1436f23. It should not be applied to the other layouts.

In order to prevent an issue related to cascading from happening, 'justify-content: flex-start' is explicitly specified.

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -158,6 +158,7 @@ limitations under the License.
 
     .mx_MImageBody {
     .mx_MImageBody_thumbnail_container {
+        justify-content: center;
         min-height: calc(1.8rem + var(--gutterSize) + var(--gutterSize));
         min-width: calc(1.8rem + var(--gutterSize) + var(--gutterSize));
     }
