Move '&[data-layout=group]' to .mx_EventTile
To create these three blocks on the same level:

- &:not([data-layout=bubble])
- &[data-layout=bubble]
- &[data-layout=group]

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -966,9 +966,8 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
                 }
             }
         }
-    }
 
-    .mx_EventTile[data-layout=group] {
+    &[data-layout=group] {
         width: 100%;
 
         .mx_EventTile_content,
@@ -1034,5 +1033,6 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
                 }
             }
         }
+    }
     }
 }
