--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -1035,4 +1035,11 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
         }
     }
     }
+
+    .mx_GenericEventListSummary {
+        &:not([data-layout=bubble]) > .mx_EventTile_line {
+            padding-inline-start: var(--ThreadView_group_spacing-start); // align summary text with message text
+            padding-inline-end: var(--ThreadView_group_spacing-end); // align summary text with message text
+        }
+    }
 }
