Remove duplicate declarations and add height and overflow properties
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/right_panel/_PinnedMessagesCard.scss
+++ b/res/css/views/right_panel/_PinnedMessagesCard.scss
@@ -17,6 +17,9 @@ limitations under the License.
 .mx_PinnedMessagesCard {
     padding-top: 0;
 
+    height: 100px;
+    overflow: visible;
+
     .mx_BaseCard_header {
         text-align: center;
         margin-top: 0;
