--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -15,6 +15,10 @@ limitations under the License.
 */
 
 .mx_TimelineCard {
+
+    height: 100px;
+    overflow: visible;
+
     .mx_TimelineCard__header {
         margin-left: 6px;
 
