--- a/res/css/views/right_panel/_PinnedMessagesCard.scss
+++ b/res/css/views/right_panel/_PinnedMessagesCard.scss
@@ -32,7 +32,7 @@ limitations under the License.
         }
 
         .mx_BaseCard_close {
-            margin-right: 6px;
+            margin-inline-end: calc(var(--BaseCard_header_button-margin) - 4px);
         }
     }
 
