--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -23,8 +23,7 @@ limitations under the License.
         margin: 5px 0 9px 0;
 
         .mx_BaseCard_close {
-            margin: 8px;
-            right: 0;
+            margin-inline-end: calc(var(--BaseCard_header_button-margin) - 4px);
         }
 
         .mx_TimelineCard__header {
