--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -15,6 +15,7 @@ limitations under the License.
 */
 
 .mx_TimelineCard {
+    --TimelineCard_header-button-size: 24px;
 
     height: 100px;
     overflow: visible;
@@ -24,6 +25,8 @@ limitations under the License.
 
         .mx_BaseCard_close {
             margin-inline-end: calc(var(--BaseCard_header_button-margin) - 4px);
+            width: var(--TimelineCard_header-button-size);
+            height: var(--TimelineCard_header-button-size);
         }
 
         .mx_BaseCard_header__TimelineCard {
