--- a/res/css/views/right_panel/_PinnedMessagesCard.scss
+++ b/res/css/views/right_panel/_PinnedMessagesCard.scss
@@ -24,7 +24,7 @@ limitations under the License.
 
     .mx_BaseCard_header {
         text-align: center;
-        margin-top: 0;
+        margin-bottom: $spacing-12;
         border-bottom: 1px solid $menu-border-color;
 
         > h2 {
