--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -21,7 +21,7 @@ limitations under the License.
     overflow: visible;
 
     .mx_BaseCard_header {
-        margin: 5px 0 9px 0;
+        margin-bottom: $spacing-12;
 
         .mx_BaseCard_close {
             margin-inline-end: calc(var(--BaseCard_header_button-margin) - 4px);
