Normalize header declarations
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -30,6 +30,12 @@ limitations under the License.
         }
 
         .mx_BaseCard_header__TimelineCard {
+            width: inherit;
+            height: inherit;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
             span:first-of-type {
                 font-weight: 600;
                 font-size: 15px;
