--- a/res/css/views/right_panel/_PinnedMessagesCard.scss
+++ b/res/css/views/right_panel/_PinnedMessagesCard.scss
@@ -15,6 +15,8 @@ limitations under the License.
 */
 
 .mx_PinnedMessagesCard {
+    @mixin RightPanelCard;
+
     --PinnedMessagesCard_header-button-size: 24px;
 
     padding-top: 0;
