--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -15,6 +15,8 @@ limitations under the License.
 */
 
 .mx_ThreadPanel {
+    @mixin RightPanelCard;
+
     --ThreadPanel_header-button-size: 24px;
 
     height: 100px;
