--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -15,6 +15,8 @@ limitations under the License.
 */
 
 .mx_TimelineCard {
+    @mixin RightPanelCard;
+
     --TimelineCard_header-button-size: 24px;
 
     height: 100px;
