Move common declarations - mx_BaseCard_header
Remove specific declarations on PinnedMessagesCard

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/_common.scss
+++ b/res/css/_common.scss
@@ -810,4 +810,8 @@ legend {
 @define-mixin RightPanelCard {
     height: 100px;
     overflow: visible;
+
+    .mx_BaseCard_header {
+        margin-bottom: $spacing-12;
+    }
 }
