--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -17,13 +17,9 @@ limitations under the License.
 .mx_TimelineCard {
     @mixin RightPanelCard;
 
-    --TimelineCard_header-button-size: 24px;
-
     .mx_BaseCard_header {
         .mx_BaseCard_close {
-            margin-inline-end: calc(var(--BaseCard_header_button-margin) - 4px);
-            width: var(--TimelineCard_header-button-size);
-            height: var(--TimelineCard_header-button-size);
+            margin: calc(var(--BaseCard_header_button-margin) - 4px);
         }
 
         .mx_BaseCard_header__TimelineCard {
