Create a common class name - mx_BaseCard_header_title
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/right_panel/_TimelineCard.scss
+++ b/res/css/views/right_panel/_TimelineCard.scss
@@ -22,7 +22,7 @@ limitations under the License.
             margin: calc(var(--BaseCard_header_button-margin) - 4px);
         }
 
-        .mx_BaseCard_header__TimelineCard {
+        .mx_BaseCard_header_title.mx_BaseCard_header_title--TimelineCard {
             width: inherit;
             height: inherit;
             display: flex;
