Create a common class name - mx_BaseCard_header_title - ThreadPanel
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -21,7 +21,7 @@ limitations under the License.
 
     .mx_BaseCard_header {
         .mx_BaseCard_back {
-            ~ .mx_BaseCard_header__ThreadPanel {
+            ~ .mx_BaseCard_header_title.mx_BaseCard_header_title--ThreadPanel {
                 width: calc(100% - 60px);
                 margin-inline-start: var(--ThreadPanel_header-button-size);
 
@@ -31,7 +31,7 @@ limitations under the License.
             }
         }
 
-        .mx_BaseCard_header__ThreadPanel {
+        .mx_BaseCard_header_title.mx_BaseCard_header_title--ThreadPanel {
             width: calc(100% - 38px);
             height: 24px;
             display: flex;
@@ -279,7 +279,7 @@ limitations under the License.
     }
 }
 
-.mx_ContextualMenu_wrapper.mx_BaseCard_header__ThreadPanel {
+.mx_ContextualMenu_wrapper.mx_BaseCard_header_title.mx_BaseCard_header_title--ThreadPanel {
     .mx_ContextualMenu {
         position: initial;
 
