--- a/res/css/_common.scss
+++ b/res/css/_common.scss
@@ -829,5 +829,11 @@ legend {
         .mx_BaseCard_close {
             margin-inline-end: calc(var(--BaseCard_header_button-margin) - 4px);
         }
+
+        .mx_BaseCard_header_title {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
     }
 }
