Move common declarations - span:first-of-type
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/_common.scss
+++ b/res/css/_common.scss
@@ -834,6 +834,13 @@ legend {
             display: flex;
             align-items: center;
             justify-content: space-between;
+
+            span:first-of-type {
+                font-weight: 600;
+                font-size: 15px;
+                line-height: 18px;
+                color: $secondary-content;
+            }
         }
     }
 }
