--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -18,22 +18,7 @@ limitations under the License.
     @mixin RightPanelCard;
 
     .mx_BaseCard_header {
-        .mx_BaseCard_back {
-            ~ .mx_BaseCard_header_title--ThreadPanel {
-                width: calc(100% - 60px);
-                margin-inline-start: var(--RightPanelCard_header-button-size);
-
-                span {
-                    margin-inline-start: 6px;
-                }
-            }
-        }
-
-        .mx_BaseCard_header_title--ThreadPanel {
-            width: calc(100% - 38px);
-            height: 24px;
-            flex: 1;
-
+        .mx_BaseCard_header_title {
             .mx_AccessibleButton {
                 font-size: 12px;
                 color: $secondary-content;
@@ -267,7 +252,7 @@ limitations under the License.
     }
 }
 
-.mx_ContextualMenu_wrapper.mx_BaseCard_header_title.mx_BaseCard_header_title--ThreadPanel {
+.mx_ContextualMenu_wrapper.mx_BaseCard_header_title {
     .mx_ContextualMenu {
         position: initial;
 
