--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -120,6 +120,8 @@ limitations under the License.
     }
 
     &.mx_ThreadView {
+        max-height: 100%;
+
         // Inside a thread timeline only
         .mx_GenericEventListSummary {
             &:not([data-layout=bubble]) > .mx_EventTile_line {
