--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -122,6 +122,11 @@ limitations under the License.
     &.mx_ThreadView {
         max-height: 100%;
 
+        .mx_ThreadView_List {
+            flex: 1;
+            overflow: scroll;
+        }
+
         // Inside a thread timeline only
         .mx_GenericEventListSummary {
             &:not([data-layout=bubble]) > .mx_EventTile_line {
@@ -138,6 +143,10 @@ limitations under the License.
             .mx_FileDropTarget {
                 border-radius: 8px;
             }
+        }
+
+        .mx_MessageComposer_sendMessage {
+            margin-right: 0;
         }
     }
 
