--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -119,6 +119,7 @@ limitations under the License.
         }
     }
 
+    // For style rules of EventTile in a thread, see _EventTile.scss
     &.mx_ThreadView {
         max-height: 100%;
 
