Set inset 8px to the dot
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -85,7 +85,7 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
         width: 8px;
         height: 8px;
         border-radius: 50%;
-        right: -25px; // center it in the gutter (16px margin + 4px padding + half 10px width)
+        inset-inline-end: 8px;
         top: 4px;
         left: auto;
     }
