- Create Button - Create Popup window

--- a/res/css/_components.scss
+++ b/res/css/_components.scss
@@ -189,6 +189,7 @@
 @import "./views/elements/_TooltipButton.scss";
 @import "./views/elements/_Validation.scss";
 @import "./views/emojipicker/_EmojiPicker.scss";
+@import "./views/gifpicker/_GifPicker.scss";
 @import "./views/location/_LocationPicker.scss";
 @import "./views/messages/_CallEvent.scss";
 @import "./views/messages/_CreateEvent.scss";
