Remove obsolete declarations - border-radius of EventTile_line
The border-radius is specified with .mx_EventTile[data-shape="ThreadsList"]

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -822,7 +822,18 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
     .mx_EventTile_line {
         width: 100%;
         box-sizing: border-box;
-        border-radius: $borderRadius !important; // override 4px
+
+        .mx_ThreadPanel_replies {
+            margin-top: $spacing-8;
+            display: flex;
+            align-items: center;
+            position: relative;
+
+            .mx_ThreadPanel_ThreadsAmount {
+                @mixin ThreadsAmount;
+                font-size: $font-12px; // Same font size as the counter on the main panel
+            }
+        }
     }
 
     .mx_DisambiguatedProfile,
