fix icon color var
Signed-off-by: Kerry Archibald <kerrya@element.io>

--- a/res/css/components/views/beacon/_ShareLatestLocation.scss
+++ b/res/css/components/views/beacon/_ShareLatestLocation.scss
@@ -17,7 +17,7 @@ limitations under the License.
 .mx_ShareLatestLocation_icon {
     height: 13px;
     width: 13px;
-    color: $text-secondary-color;
+    color: $secondary-content;
 }
 
 .mx_ShareLatestLocation_copy {
