Build new network menu based on new network dropdown component

--- a/res/css/_components.scss
+++ b/res/css/_components.scss
@@ -143,6 +143,7 @@
 @import "./views/dialogs/security/_KeyBackupFailedDialog.scss";
 @import "./views/dialogs/security/_RestoreKeyBackupDialog.scss";
 @import "./views/directory/_NetworkDropdown.scss";
+@import "./views/directory/_NewNetworkDropdown.scss";
 @import "./views/elements/_AccessibleButton.scss";
 @import "./views/elements/_AddressSelector.scss";
 @import "./views/elements/_AddressTile.scss";
