Remove inline margin from UTD error message inside a reply tile on ThreadView
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -923,6 +923,14 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
             }
         }
 
+        .mx_ReplyChain_wrapper {
+            // Error message inside ReplyTile
+            .mx_UnknownBody {
+                margin-inline: unset;
+                line-height: var(--GroupLayout-EventTile-line-height);
+            }
+        }
+
         .mx_EventTile_mediaLine {
             // such as MImageBody
             > div,
