--- a/res/css/views/gifpicker/_GifPicker.scss
+++ b/res/css/views/gifpicker/_GifPicker.scss
@@ -1,50 +1,56 @@
-.mx_GifPicker {
-    width: 450px;
+.mx_GifPicker_Box{
     height: 450px;
-    border-radius: 4px;
-    display: flex;
-    flex-flow: row wrap;
-    overflow: scroll;
-    overflow-x: hidden;
+    width: 450px;
 }
 
-.mx_GifPicker > div {
-    max-width: 50%;
-    flex: 45%;
-    margin: 10px 10px 10px 10px;
+.mx_GifPicker {
+    width: 450px;
+    height: 390px;
+    display: flex;
+    border-radius: 4px;
+    flex-wrap: wrap;
+    overflow: scroll;
+    margin: auto;
+}
+
+.mx_GifPicker > div > div {
+    height: auto;
     border: none;
     background: none;
 }
 
-.mx_GifPicker > div > button {
-    padding: 0;
+.mx_GifPicker > div > div > button {
     display: block;
     margin-left: auto;
     margin-right: auto;
     border: none;
     background: none;
+    width: 96%;
+    padding: 2%;
 }
 
-.mx_GifPicker > div > button > img{
-    width: 100%;
+.mx_GifPicker_Gif{
     border-radius: 5px;
+    width: 100%;
 }
 
-.mx_GifPicker > div > button:hover > img{
+.mx_GifPicker_Gif:hover{
     outline: solid 3px #0dbd8b;
     transition: outline 0.3s linear;
 }
 
 .mx_GifPicker_Menubar{
-    position: sticky;
-    top:0;
-    width: 90%;
-    margin: 5px auto auto;
+    width: 100%;
+    height: 60px;
 }
 
-.mx_GifPicker_Menubar > input {
+.mx_GifPicker_Searchbar {
     border: #adadad solid 1px;
     border-radius: 5px;
-    width: 95%;
-    margin: auto;
+    width: 90%;
+}
+
+.mx_GifPicker_Column{
+    width: 49%;
+    flex: 49%;
 }
