--- a/res/css/views/rooms/_GroupLayout.scss
+++ b/res/css/views/rooms/_GroupLayout.scss
@@ -17,10 +17,9 @@ limitations under the License.
 
 $left-gutter: 64px;
 
-.mx_GroupLayout {
-    --GroupLayout-EventTile-line-height: $font-22px;
+    .mx_EventTile[data-layout=group] {
+        --GroupLayout-EventTile-line-height: $font-22px;
 
-    .mx_EventTile {
         > .mx_DisambiguatedProfile {
             line-height: $font-20px;
             margin-left: $left-gutter;
@@ -45,4 +44,3 @@ $left-gutter: 64px;
             line-height: var(--GroupLayout-EventTile-line-height);
         }
     }
-}
