--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -69,6 +69,33 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
         .mx_EventTile_line {
             line-height: var(--GroupLayout-EventTile-line-height);
         }
+
+        $left-gutter: 64px;
+        --GroupLayout-EventTile-line-height: $font-22px;
+
+        > .mx_DisambiguatedProfile {
+            line-height: $font-20px;
+            margin-left: $left-gutter;
+        }
+
+        > .mx_EventTile_avatar {
+            position: absolute;
+            z-index: 9;
+        }
+
+        .mx_MessageTimestamp {
+            position: absolute; // for modern layout
+        }
+
+        .mx_EventTile_line,
+        .mx_EventTile_reply {
+            padding-top: 1px;
+            padding-bottom: 3px;
+        }
+
+        .mx_EventTile_reply {
+            line-height: var(--GroupLayout-EventTile-line-height);
+        }
     }
 }
 
