Use spacing variables

--- a/res/css/structures/_RoomStatusBar.scss
+++ b/res/css/structures/_RoomStatusBar.scss
@@ -76,8 +76,8 @@ limitations under the License.
         min-height: 70px;
         margin: 12px;
         padding-left: 16px;
-        padding-top: 4px;
-        padding-bottom: 4px;
+        padding-top: $spacing-4;
+        padding-bottom: $spacing-4;
         background-color: $header-panel-bg-color;
         border-radius: 4px;
     }
