--- a/res/css/views/gifpicker/_GifPicker.scss
+++ b/res/css/views/gifpicker/_GifPicker.scss
@@ -44,13 +44,34 @@
     height: 60px;
 }
 
-.mx_GifPicker_Searchbar {
-    border: #adadad solid 1px;
-    border-radius: 5px;
-    width: 90%;
-}
-
 .mx_GifPicker_Column{
     width: 49%;
     flex: 49%;
+}
+
+.mx_GifPicker_Search{
+    display: flex;
+    align-items: center;
+}
+
+.mx_GifPicker_Search:focus-within{
+    outline: 1px green solid;
+    border-radius: 8px;
+}
+
+.mx_GifPicker_SearchIcon {
+    width: 16px;
+    height: 16px;
+    mask: url('$(res)/img/element-icons/roomlist/search.svg');
+    mask-repeat: no-repeat;
+    background-color: $secondary-content;
+    margin-left: 7px;
+    margin-bottom: 2px;
+}
+
+.mx_GifPicker_Searchbar {
+    border: none;
+    outline: none;
+    width: 90%;
+    margin: auto;
 }
