Extract declarations of .mx_MessageActionBar from mx_GroupLayout
- Add [data-layout=group] to EventTile (it had been included in mx_GroupLayout)

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -93,15 +93,17 @@ limitations under the License.
         height: 100%;
     }
 
+    .mx_EventTile[data-layout=group] {
+        .mx_MessageActionBar {
+            right: 0;
+            top: -36px; // 2px above EventTile
+            z-index: 10; // See _EventTile.scss
+        }
+    }
+
     // Override _GroupLayout.scss for the thread panel
     .mx_GroupLayout {
         .mx_EventTile {
-            .mx_MessageActionBar {
-                right: 0;
-                top: -36px; // 2px above EventTile
-                z-index: 10; // See _EventTile.scss
-            }
-
             &[data-shape=ThreadsList] {
                 > .mx_DisambiguatedProfile {
                     margin-inline-start: 0;
