--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -930,6 +930,19 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
         max-width: 80px;
         width: auto;
     }
+
+    > .mx_DisambiguatedProfile {
+        margin-inline-start: 0;
+    }
+
+    .mx_MessageTimestamp {
+        position: initial;
+        width: auto;
+    }
+
+    .mx_EventTile_line {
+        padding-bottom: 0; // Override mx_EventTile_line on _GroupLayout.scss
+    }
 }
 
 .mx_ThreadView {
