Move declarations of mx_GenericEventListSummary[data-expanded=false] to _GenericEventListSummary.scss
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/elements/_GenericEventListSummary.scss
+++ b/res/css/views/elements/_GenericEventListSummary.scss
@@ -46,6 +46,10 @@ limitations under the License.
         .mx_GenericEventListSummary_avatars {
             padding-top: 0;
         }
+
+        &[data-expanded=false] {
+            padding: 0 49px; // Align with left edge of bubble tiles
+        }
     }
 }
 
