Move declarations of mx_GenericEventListSummary[data-expanded=true] to _GenericEventListSummary.scss
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/elements/_GenericEventListSummary.scss
+++ b/res/css/views/elements/_GenericEventListSummary.scss
@@ -50,6 +50,14 @@ limitations under the License.
         &[data-expanded=false] {
             padding: 0 49px; // Align with left edge of bubble tiles
         }
+
+        // ideally we'd use display=contents here for the layout to all work regardless of the *ELS but
+        // that breaks ScrollPanel's reliance upon offsetTop so we have to have a bit more finesse.
+        &[data-expanded=true] {
+            display: flex;
+            flex-direction: column;
+            margin: 0;
+        }
     }
 }
 
