--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -586,6 +586,12 @@ limitations under the License.
 
 .mx_EventTile.mx_EventTile_bubbleContainer[data-layout=bubble],
 .mx_EventTile.mx_EventTile_leftAlignedBubble[data-layout=bubble],
+.mx_EventTile.mx_EventTile_info[data-layout=bubble] {
+    padding: 5px 0;
+}
+
+.mx_EventTile.mx_EventTile_bubbleContainer[data-layout=bubble],
+.mx_EventTile.mx_EventTile_leftAlignedBubble[data-layout=bubble],
 .mx_EventTile.mx_EventTile_info[data-layout=bubble],
 .mx_GenericEventListSummary[data-layout=bubble][data-expanded=false] {
     --backgroundColor: transparent;
@@ -594,7 +600,6 @@ limitations under the License.
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    padding: 5px 0;
 
     .mx_EventTile_avatar {
         position: static;
