Extract flexbox declarations into _GenericEventListSummary.scss
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/elements/_GenericEventListSummary.scss
+++ b/res/css/views/elements/_GenericEventListSummary.scss
@@ -58,6 +58,9 @@ limitations under the License.
         }
 
         &[data-expanded=false] {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
             padding: 0 49px; // Align with left edge of bubble tiles
         }
 
