Extract background color into _GenericEventListSummary.scss
Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -670,7 +670,9 @@ limitations under the License.
     .mx_EventTile_line {
         background: transparent;
     }
+}
 
+.mx_EventTile.mx_EventTile_bad[data-layout=bubble] {
     &:hover {
         &::before {
             background: transparent;
