--- a/res/css/views/elements/_GenericEventListSummary.scss
+++ b/res/css/views/elements/_GenericEventListSummary.scss
@@ -52,6 +52,12 @@ limitations under the License.
             clear: both;
         }
 
+        &:hover {
+            &::before {
+                background: transparent;
+            }
+        }
+
         .mx_GenericEventListSummary_toggle {
             margin: 0 55px 0 5px;
 
