--- a/res/css/views/elements/_GenericEventListSummary.scss
+++ b/res/css/views/elements/_GenericEventListSummary.scss
@@ -28,6 +28,13 @@ limitations under the License.
         }
     }
 
+    &[data-layout=irc] {
+        .mx_GenericEventListSummary_avatars {
+            padding: 0;
+            margin: 0 9px 0 0;
+        }
+    }
+
     &[data-layout=bubble] {
         --maxWidth: 70%;
         margin-left: calc(var(--avatarSize) + var(--gutterSize));
