LocalRoom model refactoring

--- a/res/css/structures/_ScrollPanel.scss
+++ b/res/css/structures/_ScrollPanel.scss
@@ -26,6 +26,6 @@ limitations under the License.
     }
 }
 
-.mx_RoomView_newLocal .mx_ScrollPanel .mx_RoomView_MessageList {
+.mx_RoomView_local .mx_ScrollPanel .mx_RoomView_MessageList {
     justify-content: flex-start;
 }
