Use visibility property for DisambiguatedProfile
Using "display: block" may contradict with other values of the display property.

Signed-off-by: Suguru Hirahara <luixxiul@users.noreply.github.com>

--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -230,11 +230,11 @@ limitations under the License.
         }
 
         .mx_DisambiguatedProfile {
-            display: none;
+            visibility: hidden;
         }
 
         .mx_ReplyTile .mx_DisambiguatedProfile {
-            display: block;
+            visibility: visible;
         }
 
         .mx_ReactionsRow {
