--- a/res/css/structures/_RoomView.scss
+++ b/res/css/structures/_RoomView.scss
@@ -337,3 +337,25 @@ hr.mx_RoomView_myReadMarker {
         background: inherit;
     }
 }
+
+.mx_RoomView_LocalRoomLoader {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+
+    .mx_Spinner {
+        flex: unset;
+        height: auto;
+        margin-bottom: 32px;
+        margin-top: 33vh;
+    }
+
+    .mx_RoomView_LocalRoomLoader_text {
+        font-size: 24px;
+        font-weight: 600;
+        padding: 0 16px;
+        position: relative;
+        text-align: center;
+    }
+}
