--- a/res/css/views/context_menus/_NewDropdownMenu.scss
+++ b/res/css/views/context_menus/_NewDropdownMenu.scss
@@ -19,8 +19,8 @@ limitations under the License.
     border-radius: 4px;
     line-height: 1.5;
     user-select: none;
-    font-size: 12px;
-    color: #737D8C;
+    font-size: $font-12px;
+    color: $secondary-content;
 }
 
 .mx_NewDropdownMenu_button:hover,
@@ -55,7 +55,7 @@ limitations under the License.
         padding-bottom: 10px;
 
         border: 1px solid $quinary-content;
-        box-shadow: 0px 1px 3px rgba(23, 25, 28, 0.05);
+        box-shadow: 0 1px 3px rgba(23, 25, 28, 0.05);
     }
 
     .mx_ContextualMenu_chevron_top {
@@ -78,7 +78,7 @@ limitations under the License.
         height: 0;
         margin-left: 4px;
         margin-right: 19px;
-        border-top: 1px solid #F4F6FA;
+        border-top: 1px solid $system;
     }
 
     .mx_NewDropdownMenu_OptionHeader, .mx_NewDropdownMenu_OptionItem {
