--- a/res/css/views/directory/_NewNetworkDropdown.scss
+++ b/res/css/views/directory/_NewNetworkDropdown.scss
@@ -1,3 +1,19 @@
+/*
+Copyright 2022 The Matrix.org Foundation C.I.C.
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+*/
+
 .mx_NewNetworkDropdown_addServer {
     font-weight: normal;
     font-size: $font-15px;
@@ -8,7 +24,7 @@
     display: inline-block;
     width: 16px;
     height: 16px;
-    background: #F4F6FA;
+    background: $system;
     border-radius: 8px;
     text-align: center;
     line-height: 16px;
