--- a/res/css/views/dialogs/_SpotlightDialog.scss
+++ b/res/css/views/dialogs/_SpotlightDialog.scss
@@ -100,7 +100,7 @@ limitations under the License.
                 display: inline-block;
                 width: 16px;
                 height: 16px;
-                background: #F4F6FA;
+                background: $system;
                 border-radius: 8px;
                 margin-left: 8px;
                 text-align: center;
