Wrap matrix client; remove local room view; update layout

--- a/res/css/structures/_ScrollPanel.scss
+++ b/res/css/structures/_ScrollPanel.scss
@@ -27,5 +27,5 @@ limitations under the License.
 }
 
 .mx_RoomView_local .mx_ScrollPanel .mx_RoomView_MessageList {
-    justify-content: flex-start;
+    justify-content: center;
 }
