--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -614,17 +614,15 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
 
 .mx_MatrixChat_useCompactLayout {
     .mx_EventTile {
-        padding-top: 4px;
+        padding-top: $spacing-4;
 
         .mx_EventTile_line,
         .mx_EventTile_reply {
-            padding-top: 0;
-            padding-bottom: 0;
+            padding-block: 0;
         }
 
         &.mx_EventTile_info {
-            // same as the padding for non-compact .mx_EventTile.mx_EventTile_info
-            padding-top: 0px;
+            padding-top: 0; // same as the padding for non-compact .mx_EventTile.mx_EventTile_info
             font-size: $font-13px;
 
             .mx_EventTile_line,
@@ -642,8 +640,7 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
         }
 
         &.mx_EventTile_emote {
-            // add a bit more space for emotes so that avatars don't collide
-            padding-top: 8px;
+            padding-top: $spacing-8; // add a bit more space for emotes so that avatars don't collide
 
             .mx_EventTile_avatar {
                 top: 2px;
@@ -660,8 +657,7 @@ $threadInfoLineHeight: calc(2 * $font-12px); // See: _commons.scss
 
             .mx_EventTile_line,
             .mx_EventTile_reply {
-                padding-top: 0px;
-                padding-bottom: 0px;
+                padding-block: 0;
             }
         }
         }
