--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -20,12 +20,25 @@ limitations under the License.
     margin: auto;
     border-top: 1px solid $primary-hairline-color;
     position: relative;
-    display: flex;
-    justify-content: flex-end;
-    align-items: end;
+
+    display: grid;
+    grid-template:
+        "reply    reply"    auto
+        "composer controls" auto
+      / 1fr       auto;
+
+    .mx_ReplyPreview {
+        grid-area: reply;
+    }
 
     .mx_MessageComposer_row {
-        flex: 1;
+        grid-area: composer;
+    }
+
+    .mx_MessageComposer_controls {
+        grid-area: controls;
+        display: flex;
+        align-items: flex-end;
     }
 
     >[role=button] {
@@ -225,6 +238,7 @@ limitations under the License.
     padding-left: var(--size);
     border-radius: 50%;
     margin-right: 6px;
+    margin-bottom: 5px;
 
     &:last-child {
         margin-right: auto;
